added another bunch of stuffs

--- a/tss/CMakeLists.txt
+++ b/tss/CMakeLists.txt
@@ -4,14 +4,34 @@ conan_basic_setup()
 add_executable(TrainStationSim main.cpp 
 				"INIReader.h" 
 				"passenger.h" 
-				"stage.h" 
-				"manageSystem.h" 
 				"train.h" 
-				"manageSystem.cpp" 
 				"train.cpp" 
 				"passengerSpawner.h" 
 				"clock.h" 
-				"activity.h" "passenger.cpp" "event.h" "event.cpp" "boardingChecklist.h" "boardingChecklist.cpp")
+				"activity.h" 
+				"passenger.cpp" 
+				"event.h" 
+				"event.cpp" 
+				"boardingChecklist.h" 
+				"boardingChecklist.cpp" 
+				"station.h" 
+				"trainPassengerSpawner.h" 
+				"trainPassengerSpawner.cpp" 
+				"passengerManager.h" 
+				"passengerManager.cpp" 
+				"id.h" 
+				"trainManager.h" 
+				"trainManager.cpp" 
+				"space.h" 
+				"spaceLayout.cpp" 
+				"space.cpp" 
+				"spaceLayout.h" 
+				"activity.cpp" 
+				"passengerState.h" 
+				"id.cpp" 
+				"platform.h" 
+				"platform.cpp" 
+				"clock.cpp")
 
 target_link_libraries(TrainStationSim ${CONAN_LIBS})
 
